2009-04-02	Mike Massonnet
New test program to report targets

2009-04-02	Mike Massonnet
String update (Regex > Pattern)

2009-04-02	Mike Massonnet
Fix Makefile

	- panel-plugin/Makefile.am:
		I forgot to finish the changes on this file...

2009-04-02	Mike Massonnet
Install a popup command

	- configure.ac.in, panel-plugin/Makefile.am:
		Install the new binary xfce4-popup-clipman.
	- panel-plugin/panel-plugin.c, panel-plugin/common.h:
		Add an X11 selection on the panel plugin and listen to it.
	- panel-plugin/xfce4-popup-clipman.c:
		New binary that sends a message to the X11 selection installed
		in the panel plugin.

2009-04-01	Mike Massonnet
Set long URLs to 120 characters at least

	- panel-plugin/xfce4-clipman-actions.xml.in:
		Change the minimum size of long URLs from 80 to 120

2009-04-01	Mike Massonnet
Update the strings, yet again

2009-04-01	Mike Massonnet
Update the strings

2009-04-01	Mike Massonnet
April April I restore the actions

	- panel-plugin/collector.c(cb_clipboard_owner_change):
		I broked the actions earlier, fixed now.
	- panel-plugin/xfce4-clipman-actions.xml.in:
		New action for long URLs with a command to send the link to TinyURL

2009-03-31	Mike Massonnet
Set sensitivity of OK button in action dialog

	- panel-plugin/panel-plugin.c(panel_plugin_configure):
		Put the action dialog in the same window group as the settings dialog
		to respect its modal state.
	- panel-plugin/panel-plugin.c(panel_plugin_configure):
		Connect action-name, regex, and buttons add-command/delete-command to
		the new callback cb_set_action_dialog_button_ok to set automatically
		the sensitivity of the OK button in the action dialog.
	- panel-plugin/panel-plugin.c(cb_actions_row_activated):
		Set the entry texts after the commands in the treeview so it
		updates the OK button sensitivity via the entry text changes.
	- panel-plugin/panel-plugin.c(cb_add_command):
		Fix the condition to add a new command and do the same check in
		cb_refresh_command.